docs/book/samples/ch03/markerarg_check.kso
type null

main =
  x = null 5
  print "{x}"
